--- a/src/main/resources/templates/main/designers.html
+++ b/src/main/resources/templates/main/designers.html
@@ -14,6 +14,9 @@
     </div>
     <button type="submit" class="btn btn-primary">Сохранить</button>
 </form>
+<div id="pagination">
+    <div th:replace="~{${pagination}}"></div>
+</div>
 <script>
     $(function() {
         $('#form').submit(function(e) {
