--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -42,7 +42,9 @@
             </div>
         </div>
     </header>
+    <div id="content">
     <div th:replace="~{${chapter}}"></div>
+    </div>
 </main>
 </body>
 </html>
