--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -1,4 +1,4 @@
 <div>
     <h1>Главная страница</h1>
-    <p>Это фрагмент шаблона, который будет отображаться на странице теста.</p>
+    <p>Тут в будущем будут графики и статистика.</p>
 </div>
