--- a/src/main/resources/templates/main/invoices.html
+++ b/src/main/resources/templates/main/invoices.html
@@ -1,14 +1,33 @@
 
-<form id="form" th:action="@{/upload-invoice-excel}" th:method="POST">
-    <legend>Импорт накладной</legend>
-    <div class="form-group mb-3">
-        <label for="file" class="form-label">Накладная:</label>
-        <input type="file" class="form-control" id="file" name="file" acept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel">
-        <div id="numberHelp" class="form-text">Поле для добавления импортируемой накладной.</div>
-    </div>
+<div class="container mt-1">
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#saveModal">
+        Импорт накладной
+    </button>
+</div>
+<div class="modal fade" id="saveModal" tabindex="-1" aria-labelledby="saveModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
 
-    <button type="submit" class="btn btn-primary">Сохранить</button>
-</form>
+            <div class="modal-header">
+                <h5 class="modal-title" id="saveModalLabel">Импорт накладной</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+
+                <form id="form" th:action="@{/upload-invoice-excel}" th:method="POST">
+                    <div class="form-group mb-3">
+                        <label for="file" class="form-label">Накладная:</label>
+                        <input type="file" class="form-control" id="file" name="file" acept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel">
+                        <div id="numberHelp" class="form-text">Поле для добавления импортируемой накладной.</div>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary">Сохранить</button>
+                </form>
+
+            </div>
+        </div>
+    </div>
+</div>
 <div id="pagination">
     <div th:replace="~{${pagination}}"></div>
 </div>
@@ -25,6 +44,7 @@
                 processData: false,
                 dataType: 'json',
                 success: function(response) {
+                    $('#saveModal').modal('hide');
                     alert("Накладная "+response.fileName+" успешно импортирована.");
                 },
                 error: function(error) {
