--- a/src/main/resources/templates/settings/productTypes.html
+++ b/src/main/resources/templates/settings/productTypes.html
@@ -18,7 +18,7 @@
                     <div class="form-group mb-3">
                         <label for="name" class="form-label">Наименование типа:</label>
                         <input type="text" class="form-control" id="name" name="name">
-                        <div id="numberHelp" class="form-text">Поле для ввода наименования типа.</div>
+                        <div id="nameHelp" class="form-text">Поле для ввода наименования типа.</div>
                     </div>
 
                     <button type="submit" class="btn btn-primary">Сохранить</button>
