--- a/src/main/resources/templates/pagination/settings/productTypes.html
+++ b/src/main/resources/templates/pagination/settings/productTypes.html
@@ -1,6 +1,6 @@
 <div class="container mt-1">
     <div class="container">
-        <h1>Типы товаров</h1>
+        <h1>Типы сотрудничества</h1>
         <!-- Pagination -->
         <nav aria-label="Page navigation example">
             <ul class="pagination">
@@ -10,8 +10,6 @@
                 <li th:each="pageNumber : ${#numbers.sequence(1, paginationPages)}" class="page-item">
                     <a class="page-link" th:href="@{'?page=' + ${pageNumber}}" th:text="${pageNumber}"></a>
                 </li>
-
-
                 <li class="page-item">
                     <a class="page-link" href="#">Next</a>
                 </li>
