--- a/src/main/resources/templates/pagination/invoices.html
+++ b/src/main/resources/templates/pagination/invoices.html
@@ -19,7 +19,22 @@
         </nav>
         <!-- Contract Listing -->
         <ul class="list-group">
-            <li class="list-group-item" th:each="paginationData : ${paginationsData}" th:text="${paginationData.fileName}"></li>
+            <li class="list-group-item" th:each="paginationData : ${paginationsData}">
+                <div class="row">
+                    <div class="col-6 col-sm-11" th:text="${paginationData.fileName}"></div>
+                    <div class="col-6 col-sm-1">
+                        <form th:action="@{'/invoice/' + ${paginationData.id}}">
+                            <button type="submit" class="btn btn-danger p-1 btn-delete">
+                                <svg fill="#000000" width="25px" height="25px" viewBox="0 0 36 36" version="1.1"  preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                    <title>trash-line</title>
+                                    <path class="clr-i-outline clr-i-outline-path-1" d="M27.14,34H8.86A2.93,2.93,0,0,1,6,31V11.23H8V31a.93.93,0,0,0,.86,1H27.14A.93.93,0,0,0,28,31V11.23h2V31A2.93,2.93,0,0,1,27.14,34Z"></path><path class="clr-i-outline clr-i-outline-path-2" d="M30.78,9H5A1,1,0,0,1,5,7H30.78a1,1,0,0,1,0,2Z"></path><rect class="clr-i-outline clr-i-outline-path-3" x="21" y="13" width="2" height="15"></rect><rect class="clr-i-outline clr-i-outline-path-4" x="13" y="13" width="2" height="15"></rect><path class="clr-i-outline clr-i-outline-path-5" d="M23,5.86H21.1V4H14.9V5.86H13V4a2,2,0,0,1,1.9-2h6.2A2,2,0,0,1,23,4Z"></path>
+                                    <rect x="0" y="0" width="36" height="36" fill-opacity="0"/>
+                                </svg>
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </li>
         </ul>
     </div>
 </div>
@@ -29,6 +44,23 @@
             e.preventDefault();
             const page = parseInt($(this).text());
             updatePage(page-1);
+        });
+        $(".btn-delete").click(function(e) {
+            e.preventDefault();
+
+            let form = $(this).closest("form");
+            let action = form.attr("action");
+
+            $.ajax({
+                url: action,
+                method: "DELETE",
+                success: function(response) {
+                    form.closest("li").remove();
+                },
+                error: function(error) {
+                    alert("Произошла ошибка при удалении элемента.");
+                }
+            });
         });
     });
 
