Частично сделал реадактирвоание данных

--- a/src/main/resources/templates/main/agreement.html
+++ b/src/main/resources/templates/main/agreement.html
@@ -1,5 +1,5 @@
 <div class="container mt-1">
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#saveModal">
+    <button id="button_saveModal" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#saveModal">
         Создание договора
     </button>
 </div>
@@ -12,8 +12,8 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-
                 <form id="form" th:action="@{/agreement}" th:method="POST">
+                    <input type="hidden" name="id" id="id">
                     <legend>Создание договора</legend>
                     <div class="form-group mb-3">
                         <label for="number" class="form-label">Номер договора:</label>
@@ -52,6 +52,9 @@
 </div>
 <script>
     $(function() {
+        $('#button_saveModal').click(function(e) {
+            $('#form').attr('method', 'POST');
+        });
         $('#form').submit(function(e) {
             e.preventDefault();
 
