--- a/src/main/resources/templates/main/designers.html
+++ b/src/main/resources/templates/main/designers.html
@@ -1,5 +1,5 @@
 <div class="container mt-1">
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#saveModal">
+    <button id="button_saveModal" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#saveModal">
         Добавление дизайнера
     </button>
 </div>
@@ -7,14 +7,13 @@
 <div class="modal fade" id="saveModal" tabindex="-1" aria-labelledby="saveModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-
             <div class="modal-header">
                 <h5 class="modal-title" id="saveModalLabel">Добавление дизайнера</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-
                 <form id="form" th:action="@{/userInfo}" th:method="POST">
+                    <input type="hidden" name="id" id="id">
                     <legend>Создание дизайнера</legend>
                     <div class="form-group mb-3">
                         <label for="name" class="form-label">Имя:</label>
@@ -45,20 +44,6 @@
                     <div class="">
                         <label for="contact_links" class="form-label">Соцсети:</label>
                         <div id="contact_links" class="col-lg-12">
-                            <div id="row">
-                                <div class="input-group m-3">
-                                    <div class="input-group-prepend">
-                                        <button class="btn btn-danger"
-                                                id="DeleteRow"
-                                                type="button">
-                                            <i class="bi bi-trash"></i>
-                                            Delete
-                                        </button>
-                                    </div>
-                                    <input type="text" class="form-control m-input" name="contactLinks[]" placeholder="Введите ссылку на соцсеть">
-                                </div>
-                            </div>
-
                             <div id="newinput"></div>
                             <button id="add-contact-link" type="button" class="btn btn-dark">
                         <span class="bi bi-plus-square-dotted">
@@ -99,6 +84,9 @@
 </div>
 <script>
     $(function() {
+        $('#button_saveModal').click(function(e) {
+            $('#form').attr('method', 'POST');
+        });
         $('#form').submit(function(e) {
             e.preventDefault();
 
@@ -119,18 +107,22 @@
         });
 
         $("#add-contact-link").click(function () {
-            newRowAdd =
-                '<div id="row"> <div class="input-group m-3">' +
-                '<div class="input-group-prepend">' +
-                '<button class="btn btn-danger" id="DeleteRow" type="button">' +
-                '<i class="bi bi-trash"></i> Delete</button> </div>' +
-                '<input type="text" class="form-control m-input" name="contactLinks[]" placeholder="Введите ссылку на соцсеть"> </div> </div>';
-
-            $('#newinput').append(newRowAdd);
+            createLink("","");
         });
         $("body").on("click", "#DeleteRow", function () {
             $(this).parents("#row").remove();
         })
 
     });
+    function createLink(contactLinkName, contactLinkId){
+        countLinks = $(".contactLinks").length;
+        newRowAdd =
+            '<div id="row"> <div class="input-group m-3">' +
+            '<div class="input-group-prepend">' +
+            '<button class="btn btn-danger" id="DeleteRow" type="button">' +
+            '<i class="bi bi-trash"></i> Delete</button> </div>' +
+            '<input type="hidden" name="contactLinks['+countLinks+'][id]" value="' + contactLinkId + '">'+
+            '<input type="text" class="form-control m-input contactLinks" name="contactLinks['+countLinks+'][link]" value="' + contactLinkName + '" placeholder="Введите ссылку на соцсеть"> </div> </div>';
+        $('#newinput').append(newRowAdd);
+    }
 </script>
