--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -19,7 +19,7 @@
                 </a>
 
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="/" class="nav-link px-2 text-secondary">Главная</a></li>
+<!--                    <li><a href="/" class="nav-link px-2 text-secondary">Главная</a></li>-->
                     <li><a href="/agreement" class="nav-link px-2 text-white">Договора</a></li>
                     <li><a href="/designers" class="nav-link px-2 text-white">Дизайнеры</a></li>
                     <li><a href="/invoices" class="nav-link px-2 text-white">Накладные</a></li>
