--- a/src/main/resources/templates/pagination/settings/partnerTypes.html
+++ b/src/main/resources/templates/pagination/settings/partnerTypes.html
@@ -1,6 +1,6 @@
 <div class="container mt-1">
     <div class="container">
-        <h1>Типы товаров</h1>
+        <h1>Типы сотрудничества</h1>
         <nav aria-label="Page navigation example">
             <ul class="pagination">
                 <li class="page-item disabled">
