--- a/src/main/resources/templates/main/settings.html
+++ b/src/main/resources/templates/main/settings.html
@@ -3,7 +3,7 @@
         <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-white col-md-3" style="width: 280px;">
             <ul class="nav nav-pills flex-column mb-auto">
                 <li class="nav-item ">
-                    <a class="nav-link active" href="/settings/productTypes">
+                    <a class="nav-link" href="/settings/productTypes">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
                         Типы товаров
                     </a>
